# allkinds-chat-bot

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Procfile  README.md  bot_manager.py  health_server.py  healthcheck.py  pyproject.toml  pytest.ini  railway.json  requirements.txt  restart_bot.py
.cursor/rules/: allkinds.mdc
.github/workflows/: deploy.yml
scripts/: add_points_column.py  categorize_existing_questions.py  check_categories.py  consolidate_categories.py  list_questions.py  recategorize_final.py  recategorize_questions.py  recategorize_railway.py  update_categories.py  update_user_points.py
scripts/fixes/: enhance_question_push.py
src/: health.py  main.py
src/api/: health.py
src/chat_bot/: admin_tools.py  chat_handlers.py  handlers.py  health.py  keyboards.py  main.py  message_handlers.py  middlewares.py  navigation.py  new_handlers.py  new_message_handlers.py  repositories.py  states.py  user_management.py  utils.py
src/core/: config.py  config.py.comm_fix_bak_20250429_170914  config.py.railway_bak_20250429_172550  credentials.py  diagnostics.py  openai_service.py  question_categorizer.py  startup.py
src/db/: __init__.py  apply_migrations.py  base.py  base.py.railway_bak_20250429_172550  base.py.railway_fix_bak_20250429_170914  base.py.railway_fix_bak_20250429_172550  init_chat_db.py  init_communicator_db.py  init_db.py  init_dev_data.py  models.py  verify_postgres_connection.py
tests/: README.md  conftest.py
tests/fixtures/: bot.py  database.py
tests/integration/: test_bot_startup.py  test_chat_bot.py  test_question_creation.py  (+3 more)
(+44 files in other folders)
